Java 1.8 specific compilation error fix